# dp-python-tools

./: .gitignore  Makefile  README.md  myscript.py  pyproject.toml  test.txt  test_s3_functions.py
dpytools/config/: README.md  config.py
dpytools/config/properties/: __init__.py  base.py  intproperty.py  string.py
dpytools/email/ses/: README.md  client.py
dpytools/http/: README.md  base.py  swagger.yaml  upload.py
dpytools/s3/: README.md  basic.py  decompress_files_from_s3.py
dpytools/slack/: README.md  slack.py
dpytools/stores/directory/: base.py  local.py
dpytools/validation/json/: README.md  validation.py
outputs/: decompress_from_s3.csv
s3/: basic.py  main.py  setup_s3.py  test.json
stores/directory/: base.py  local.py
tests/: conftest.py  test_config.py  test_intproperty.py  test_json_validation.py  test_local_directory.py  test_s3_functions.py
tests/config/: test_intproperty.py  test_stringproperty.py
tests/email/: test_email.py
tests/http/: test_http.py  test_upload.py
tests/s3/: test_s3_functions.py
tests/slack/: test_slack.py
tests/stores/directory/: test_local_directory.py
tests/test_cases/: decompress_from_s3.json  pipeline_config_invalid_data_type.json  pipeline_config_missing_required_field.json  pipeline_config_schema.json  s3_bucket.tar
tests/test_cases/test_local_store/: data.csv  metadata.json  pipeline-config.json
tests/test_cases/test_local_store/local_directory_folders/local_directory_lone_file/: local_directory_test.json
