[tool.poetry]
name = "dpytools"
version = "0.1.0"
description = "Simple reusable python resources for digital publishing"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
structlog = "^23.2.0"
jsonschema = "^4.21.1"
requests = "^2.31.0"
pytest = "^7.4.4"
backoff = "^2.2.1"
boto3 = "^1.34.45"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
